Track rates for DAI, EUR, USDT

--- a/service/package.json
+++ b/service/package.json
@@ -3,5 +3,8 @@
     "ccxt": "1.42.96",
     "date-fns": "2.19.0",
     "faunadb": "4.1.1"
+  },
+  "devDependencies": {
+    "lodash": "4.17.21"
   }
 }
