Track FRR rates for funding USD and USDT on Bitfinex

--- a/service/package.json
+++ b/service/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "ccxt": "1.42.96",
     "date-fns": "2.19.0",
-    "faunadb": "4.1.1"
+    "faunadb": "4.1.1",
+    "got": "11.8.2"
   },
   "devDependencies": {
     "lodash": "4.17.21"
