--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "chart.js": "2.9.4",
+    "date-fns": "2.19.0",
     "faunadb": "4.1.1",
     "next": "10.0.8",
     "react": "17.0.1",
