--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "chart.js": "2.9.4",
+    "chart.js": "3.3.2",
+    "chartjs-adapter-date-fns": "1.1.0-beta.1",
     "date-fns": "2.19.0",
     "faunadb": "4.1.1",
     "next": "11.0.0",
