--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "chartjs-adapter-date-fns": "2.0.0",
     "date-fns": "2.28.0",
     "faunadb": "4.5.4",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "next": "^13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
